@@ -6,20 +6,6 @@
  * $Id$
  *
  * @brief Pre-compiled IDL source for the IOP module.
- *
- * This file is used to generate IOP_CodecC.{h,cpp}, using the following
- * command:
- *
- *   tao_idl.exe
- *        -o orig -Gp -Gd -SS -Sci
- *        -Wb,export_macro=TAO_Export
- *        -Wb,export_include=tao/TAO_Export.h
- *        -Wb,pre_include="ace/pre.h"
- *        -Wb,post_include="ace/post.h"
- *        -Wb,versioning_begin=TAO_BEGIN_VERSIONED_NAMESPACE_DECL
- *        -Wb,versioning_end=TAO_END_VERSIONED_NAMESPACE_DECL
- *        IOP_Codec.pidl
- *
  */
 
 #ifndef TAO_IOP_CODEC_PIDL
